Missing documentation for .material_index #88485

Closed
opened 2021-05-22 18:25:19 +02:00 by Andreas · 4 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71

Blender Version
Broken: version: 2.92.0, branch: master, commit date: 2021-02-24 16:25, hash: blender/blender@02948a2cab
Worked: -

Short description of error
Both here:
https://docs.blender.org/api/current/bpy.types.MeshLoopTriangle.html#bpy.types.MeshLoopTriangle.material_index
and here:
https://docs.blender.org/api/current/bpy.types.MeshPolygon.html?highlight=meshpolygon#bpy.types.MeshPolygon.material_index

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71 **Blender Version** Broken: version: 2.92.0, branch: master, commit date: 2021-02-24 16:25, hash: `blender/blender@02948a2cab` Worked: - **Short description of error** Both here: https://docs.blender.org/api/current/bpy.types.MeshLoopTriangle.html#bpy.types.MeshLoopTriangle.material_index and here: https://docs.blender.org/api/current/bpy.types.MeshPolygon.html?highlight=meshpolygon#bpy.types.MeshPolygon.material_index
Author

Added subscriber: @ndh

Added subscriber: @ndh
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by blender/blender@870aaf3fb6

This issue was referenced by blender/blender@870aaf3fb645a2894dd1c0fb34f23b650ec7cab3
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Aaron Carlisle self-assigned this 2021-05-29 17:23:31 +02:00
Sign in to join this conversation.
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-manual#88485
No description provided.