Docs: Add documentation for 'material_index'

Fixes T88485